# solana-contracts

./: .gitignore  Anchor.toml  README.md  bacon.toml  package-lock.json
programs/: example.js  moves.js  relations.js
programs/elementals/: Cargo.toml
programs/elementals/src/: enums.rs  events.rs  game_accounts.rs  lib.rs  movements.rs
tests/: side-stacker.ts
