[package]
name = "elementals"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "elementals"

[features]
default = ["cpi"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
soar ={ git = "https://github.com/magicblock-labs/SOAR", package = "soar-cpi"}
itertools = "0.13.0"
strum = "0.26"
strum_macros = "0.26"
